# cw6-cdk-infra

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
cw_aws_infra/: cw_aws_infra_stack.py
manual_aws_setup/: cdk_bootstrap_least_privilege_permission.json  cdk_deploy_assume_role_policy.json
tests/unit/: test_cw_aws_infra_stack.py
